--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "cookie-parser": "1.4.3",
     "debug": "2.6.3",
     "express": "4.15.2",
+    "jade": "1.11.0",
     "morgan": "1.8.1",
-    "serve-favicon": "2.4.2"
+    "serve-favicon": "2.4.2",
+    "stylus": "0.54.5"
   }
 }
